feat: get list of product revisions
