# docs/swagger.yaml
@@ -32,6 +32,25 @@ definitions:
       updatedAt:
         type: string
     type: object
+  github_com_DaniaLD_upera-go-test_pkg_model.ProductRevision:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: string
+      newValue:
+        $ref: '#/definitions/github_com_DaniaLD_upera-go-test_pkg_model.Product'
+      previousValue:
+        $ref: '#/definitions/github_com_DaniaLD_upera-go-test_pkg_model.Product'
+      productId:
+        type: string
+      revisionId:
+        type: integer
+      updatedAttributes:
+        items:
+          type: string
+        type: array
+    type: object
 info:
   contact:
     email: danial.6274@gmail.com
@@ -60,6 +79,28 @@ paths:
       summary: CreateProduct
       tags:
       - Product
+  /api/v1/product-revision/{productId}:
+    get:
+      description: GetProductRevisions
+      parameters:
+      - description: Product Id
+        format: string
+        in: path
+        name: productId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_DaniaLD_upera-go-test_pkg_model.ProductRevision'
+            type: array
+      summary: GetProductRevisions
+      tags:
+      - Product Revision
   /api/v1/product/{id}:
     put:
       description: UpdateProduct
